tests/should_fail/syntax_assign_to_literal.nv
module main

// SHOULD FAIL: assign to a literal integer on lhs
1 = 5
println("unreachable")
